skeplib/tests/fixtures/sema_project/invalid/duplicate_project_function_declaration/main.sk
fn value() -> Int { return 1; }
fn value() -> Int { return 2; }
fn main() -> Int { return value(); }
